<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#e6e6e6"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="成员信息"
            android:textColor="#232833"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/icon_stars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="为已成为该账户的下级"
            android:textColor="#232833"
            android:textSize="12sp" />
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableAutoLoadMore="true"
        app:srlEnableFooterFollowWhenLoadFinished="true"
        app:srlEnableRefresh="false">

        <com.classic.common.MultipleStatusView
            android:id="@+id/multipleStatusView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:overScrollMode="never" />

        </com.classic.common.MultipleStatusView>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlDrawableProgress="@drawable/ic_progress_puzzle"
            app:srlFinishDuration="0"
            app:srlTextFailed="@string/load_failed"
            app:srlTextFinish="@string/load_finish"
            app:srlTextLoading="@string/load_loading"
            app:srlTextNothing="@string/load_noting"
            app:srlTextPulling="@string/load_pulling"
            app:srlTextRelease="@string/load_release" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>